edit english bootcamp contents

--- a/bootcamp/en/solidity/1-Intro/1.3 - ContractStructure.md
+++ b/bootcamp/en/solidity/1-Intro/1.3 - ContractStructure.md
@@ -1,4 +1,4 @@
-# Bố cục của một Contract
+# Contract structure
 
 ## State variables
 `State variables` are variables declared at the beginning of the contract, outside the scope of `local variables` declared in `function`.
