--- a/bootcamp/en/solidity/2-SetUp/2.1 - GettingStarted.md
+++ b/bootcamp/en/solidity/2-SetUp/2.1 - GettingStarted.md
@@ -11,7 +11,7 @@
 - Node v20 LTS
 
 ## Kaikas
-- Download Kaikas Wallet at [https://kaikas.io/](https://kaikas.io/)
+- Download Metamask Wallet at [https://Metamask.io/](https://metamask.io/)
 - Create wallet
   
 ## Testnet KLAY
