--- a/bootcamp/en/solidity/3-Basic/2.1 - ValueTypes.md
+++ b/bootcamp/en/solidity/3-Basic/2.1 - ValueTypes.md
@@ -61,7 +61,7 @@ bool public falseVar = false;
 Toán tử `||` và `&&` áp dụng các quy tắc short-circuit thông thường. Điều này có nghĩa là trong biểu thức `f(x) || g(y)`, nếu `f(x)` đánh giá là `true`, `g(y)` sẽ không được đánh giá ngay cả khi nó có thể có tác động phụ.
 
 ## ADDRESS
-- `address` là một kiểu dữ liệu đặc biệt trong Solidity cho phép lưu trữ 20 byte (kích cỡ) địa chỉ của một tài khoản Ethereum
+- `address` is a special data type in Solidity that allows storing 20 bytes (size) of the address of an Kaia account
 - `address payable` tương tự với `address` nhưng có thêm tính năng `transfer` và `send`
 
 ```solidity  
