--- a/bootcamp/en/solidity/3-Basic/2.1 - ValueTypes.md
+++ b/bootcamp/en/solidity/3-Basic/2.1 - ValueTypes.md
@@ -62,7 +62,7 @@ Toán tử `||` và `&&` áp dụng các quy tắc short-circuit thông thườn
 
 ## ADDRESS
 - `address` is a special data type in Solidity that allows storing 20 bytes (size) of the address of an Kaia account
-- `address payable` tương tự với `address` nhưng có thêm tính năng `transfer` và `send`
+- `address payable` similar to `address` but adds 2 more methods `transfer` and `send`
 
 ```solidity  
 address public exampleAddress = 0xCA35b7d915458EF540aDe6068dFe2F44E8fa733c;
