edit vn solidity intro added images

--- a/bootcamp/vi/solidity/1-Intro/1.1 - Blockchain.md
+++ b/bootcamp/vi/solidity/1-Intro/1.1 - Blockchain.md
@@ -1,7 +1,11 @@
 # Cản bản về Blockchain
 
 ## Blockchain là gì?
-Blockchain là một sổ cái số phân tán và không thể thay đổi, ghi lại tất cả các giao dịch xảy ra trên một mạng. Mỗi khối trong chuỗi chứa một số lượng giao dịch được mã hóa, và khi một khối mới được tạo ra, nó được liên kết mật thiết với khối trước đó, tạo thành một chuỗi liên tục không thể bị thay đổi mà không bị phát hiện. Điều này đảm bảo tính minh bạch và an toàn cao, vì thông tin không thể bị thay đổi hoặc xóa một cách dễ dàng mà không có sự đồng thuận của mạng, làm cho blockchain trở thành công nghệ nền tảng cho các ứng dụng như tiền điện tử và hợp đồng thông minh.
+Blockchain là một sổ cái số phân tán và không thể thay đổi, ghi lại tất cả các giao dịch xảy ra trên một mạng. Mỗi khối trong chuỗi chứa một số lượng giao dịch được mã hóa, và khi một khối mới được tạo ra, nó được liên kết mật thiết với khối trước đó, tạo thành một chuỗi liên tục không thể bị thay đổi mà không bị phát hiện.
+
+![blockchain là gì minh hoạ](/bootcamp/vi/solidity/images/what-is-blockchain.png)
+
+Điều này đảm bảo tính minh bạch và an toàn cao, vì thông tin không thể bị thay đổi hoặc xóa một cách dễ dàng mà không có sự đồng thuận của mạng, làm cho blockchain trở thành công nghệ nền tảng cho các ứng dụng như tiền điện tử và hợp đồng thông minh.
 
 ## Klaytn PBFT consensus
 Cơ chế đồng thuận: Klaytn sử dụng thuật toán Istanbul BFT, một phiên bản cải tiến của PBFT (Practical Byzantine Fault Tolerance) được tối ưu cho mạng blockchain.
@@ -21,6 +25,7 @@ Quá trình đồng thuận:
 
 Khi giao dịch được gửi tới CN (`Council`) từ các PN, hàm `VRF (Verifiable Random Function)` được sử dụng để lựa chọn ngẫu nhiên 1 `Committee` bao gồm 4 CN. 1 CN sẽ tiếp tục được lựa chọn ngẫu nhiên để tạo `block` cùng với sự quan sát của 3 CN khác. Khi `block` được tạo, các 2/3 CN trong `Council` sẽ phải ký xác nhận `block` đó để đạt được sự đồng thuận.
 
+![kaia PBFT là gì minh hoạ](/bootcamp/vi/solidity/images/kaia-pbft-consensus.png)
 
 ## KLVM
 `KLVM`, viết tắt của `Klaytn Virtual Machine`, là một môi trường máy ảo phi tập trung chạy trên mạng blockchain Klaytn. `KLVM` cho phép việc thực thi các hợp đồng thông minh, là những chương trình tự động thực hiện các giao dịch hoặc các hành động cụ thể dựa trên các điều kiện đã được mã hóa trước. Hợp đồng thông minh được viết bằng các ngôn ngữ lập trình như Solidity, sau đó được biên dịch thành `bytecode` mà `KLVM` có thể hiểu và thực thi. `KLVM` tương thích với `EVM` của Ethereum nên hỗ trợ hoàn toàn các công cụ phát triển, `opcode`, và mã nguồn hiện tại.
