edit vn solidity setup kaia

--- a/bootcamp/vi/solidity/2-SetUp/2.1 - GettingStarted.md
+++ b/bootcamp/vi/solidity/2-SetUp/2.1 - GettingStarted.md
@@ -10,6 +10,6 @@
 - Tải ví Metamask tại [https://metamask.io/](https://metamask.io/)
 - Khởi tạo ví
   
-## Testnet KLAY
+## Testnet KAIA
 - Truy cập trang web [https://baobab.wallet.klaytn.foundation/faucet](https://baobab.wallet.klaytn.foundation/faucet)
-- Copy và paste địa chỉ ví Klaytn vào ô input để nhận `KLAY` trên testnet Baobab
+- Copy và paste địa chỉ ví Kaia vào ô input để nhận `KAIA` trên testnet Kairos
