edit solidity en

--- a/bootcamp/en/solidity/3-Basic/2.1 - ValueTypes.md
+++ b/bootcamp/en/solidity/3-Basic/2.1 - ValueTypes.md
@@ -52,13 +52,13 @@ bool public falseVar = false;
 ```
 
 ### Operators:
-- `!` (luận lý ngược, tương đương “not”)
-- `&&` (luận lý gộp tương đương “and”)
-- `||` (luận lý hoặc tương đương “or”)
-- `==` (bằng)
-- `!=` (không bằng)
+- `!` (logical negation)
+- `&&` (logical conjunction, “and”)
+- `||` (logical disjunction, “or”)
+- `==` (equality)
+- `!=` (inequality)
 
-Toán tử `||` và `&&` áp dụng các quy tắc short-circuit thông thường. Điều này có nghĩa là trong biểu thức `f(x) || g(y)`, nếu `f(x)` đánh giá là `true`, `g(y)` sẽ không được đánh giá ngay cả khi nó có thể có tác động phụ.
+The operators `||` and `&&` apply the common short-circuiting rules. This means that in the expression `f(x) || g(y)`, if `f(x)` evaluates to `true`, `g(y)` will not be evaluated even if it may have side-effects.
 
 ## ADDRESS
 - `address` is a special data type in Solidity that allows storing 20 bytes (size) of the address of an Kaia account
@@ -84,8 +84,8 @@ bytes1 b = 0x56; //  [01010110]
 bytes c = "abc"; //  [01100001, 01100010, 01100011]
 ```
 
-## Giá trị mặc định
-Những biến được khai báo mà không gán giá trị thì sẽ có giá trị mặc định
+## Default values
+Declared variables without value assignment will have its default values.
 
 ```solidity
 bool public defaultBool; // false
@@ -96,23 +96,23 @@ bytes1 public defaultByte; // 0x00
 ```
 
 ## CONTRACT
-`contract` được dùng để khai báo 1 contract trong solidity
+`contract` is used to declare a contract in Solidity.
 
 ```solidity
 contract HelloWorld {}
 ```
 
-`contract` cũng có thể thừa hưởng từ 1 contract khác với keyword `is`
+`contract` can also inherit from another contract using the keyword `is`
 ```solidity
 contract Mercedes is Car {}
 ```
 
 ## ENUM
-`Enum` là một cách để tạo kiểu do người dùng xác định trong Solidity. Chúng có thể chuyển đổi rõ ràng sang và từ tất cả các loại số nguyên nhưng không được phép chuyển đổi ngầm. Việc chuyển đổi rõ ràng từ số nguyên sẽ kiểm tra trong thời gian chạy rằng giá trị nằm trong phạm vi của enum và gây ra `Panic Error` nếu không. `Enums` yêu cầu ít nhất một thành viên và giá trị mặc định của nó khi được khai báo là thành viên đầu tiên. `Enums` không thể có nhiều hơn 256 thành viên.
+`Enums` are one way to create a user-defined type in Solidity. They are explicitly convertible to and from all integer types but implicit conversion is not allowed. The explicit conversion from integer checks at runtime that the value lies inside the range of the enum and causes a `Panic error` otherwise. `Enums` require at least one member, and its default value when declared is the first member. Enums cannot have more than 256 members.
 
-Cách biểu diễn dữ liệu giống như đối với enum trong C: Các tùy chọn được biểu thị bằng các giá trị số nguyên không dấu tiếp theo bắt đầu từ 0.
+The data representation is the same as for `enums` in C: The options are represented by subsequent unsigned integer values starting from 0.
 
-Sử dụng `type(NameOfEnum).min` và `type(NameOfEnum).max` bạn có thể nhận được giá trị nhỏ nhất và lớn nhất tương ứng của enum đã cho.
+Using `type(NameOfEnum).min` and `type(NameOfEnum).max` you can get the smallest and respectively largest value of the given enum.
 
 ```solidity
 // SPDX-License-Identifier: MIT
@@ -160,9 +160,9 @@ contract Enum {
 ```
 
 ## TYPE
-Loại giá trị do người dùng xác định cho phép tạo ra sự trừu tượng hóa chi phí bằng 0 đối với loại giá trị cơ bản. Điều này tương tự như bí danh nhưng có yêu cầu loại chặt chẽ hơn.
+A user-defined value type allows creating a zero cost abstraction over an elementary value type. This is similar to an alias, but with stricter type requirements.
 
-Loại giá trị do người dùng xác định được xác định bằng loại `type C is V`, trong đó `C` là tên của loại type mới được khai báo và `V` phải là loại giá trị tích hợp.
+A user-defined value type is defined using `type C is V`, where `C` is the name of the newly introduced type and `V` has to be a built-in value type (the “underlying type”)
 
 ```solidity
 // SPDX-License-Identifier: GPL-3.0
@@ -173,15 +173,15 @@ type UFixed256x18 is uint256;
 ```
 
 ## FUNCTION
-`function` dùng để khai báo 1 hàm trong solidity.
+`function` keyword is used to declare a function in Solidity.
 
-Mình khai báo 1 `function` đầy đủ như bên dưới
+We can declare a `function` like below:
 
 ```solidity
 contract Counter {
     uint public count;
 
-    // Hàm để xem biến count
+    // Function to view count variable
     function get() public view returns (uint) {
         return count;
     }
