fundme contract updated

--- a/bootcamp/en/solidity/5-Contracts/5.3a - FoundryFundMe.md
+++ b/bootcamp/en/solidity/5-Contracts/5.3a - FoundryFundMe.md
@@ -12,6 +12,7 @@ This exercise is based on Patrick Collins's [Foundry FundMe](https://github.com/
 
 1. First run `forge init klaytn-fund-me`
 2. We will then create the `FundMe.sol` file
+
 ```solidity
 // FundMe.sol
 // SPDX-License-Identifier: MIT
@@ -19,7 +20,8 @@ This exercise is based on Patrick Collins's [Foundry FundMe](https://github.com/
 pragma solidity ^0.8.19;
 // 2. Imports
 // We import the orakl library so we can interact with oracle
-import { IAggregator } from "@bisonai/orakl-contracts/src/v0.1/interfaces/IAggregator.sol";
+
+import { IFeedProxy } from "@bisonai/orakl-contracts/v0.2/src/interfaces/IFeedProxy.sol";
 
 // We import the PriceConverter library so we can calculate the KLAY value
 import { PriceConverter } from "./PriceConverter.sol";
@@ -39,7 +41,7 @@ contract FundMe {
     // The next line means
     // use the PriceConverter library for variables with type uint256
     using PriceConverter for uint256;
-
+    
     // State variables
     // Declare a public constant MINIMUM_USD with value $5 but equal to peb so must multiply by 10^18
     uint256 public constant MINIMUM_USD = 5 * 10 ** 18;
@@ -49,8 +51,8 @@ contract FundMe {
     address[] private s_funders;
     // Declare a mapping between address and private uint256 linking the address with the fund amount.
     mapping(address => uint256) private s_addressToAmountFunded;
-    // Declare contract AggregatorV3Interface private and assign it to the variable s_pricefeed, s means storage
-    IAggregator private s_priceFeed;
+    // Declare contract AggregatorV2Interface internal and assign it to the variable s_dataFeed, s means storage
+    IFeedProxy internal s_dataFeed;
 
     // Events (we have none!)
 
@@ -73,9 +75,11 @@ contract FundMe {
     //// view / pure
 
     // Declaring a constructor with an address for priceFeed implies that this is the address of the Oracle contract with IAggregator
-    constructor(address priceFeed) {
+    constructor(address feedProxy) {
         // Input the address into the interface and assign it to the variable s_priceFeed
-        s_priceFeed = IAggregator(priceFeed);
+        // s_priceFeed = IAggregator(priceFeed);
+        s_dataFeed = IFeedProxy(feedProxy);
+
         // Assign the variable i_owner to msg.sender (the person who deploys this contract)
         i_owner = msg.sender;
     }
@@ -83,7 +87,7 @@ contract FundMe {
     /// @notice Funds our contract based on the KLAY/USDT price from Orakl
        // Deposit to our contract based on ETH/USD price
     function fund() public payable {
-        require(msg.value.getConversionRate(s_priceFeed) >= MINIMUM_USD, "You need to spend more ETH!");
+        require(msg.value.getConversionRate(s_dataFeed) >= MINIMUM_USD, "You need to spend more ETH!");
         // require(PriceConverter.getConversionRate(msg.value) >= MINIMUM_USD, "You need to spend more ETH!");
         // Then map the sender's address with msg.value in mapping s_addressToAmountFunded
         s_addressToAmountFunded[msg.sender] += msg.value;
@@ -154,37 +158,34 @@ contract FundMe {
     }
 
     /// @notice Gets the price feed
-    function getPriceFeed() public view returns (IAggregator) {
-        return s_priceFeed;
+    function getPriceFeed() public view returns (address) {
+        return s_dataFeed.getFeed();
     }
 
     /// @notice Gets the decimals of the price feed
     function getDecimals() public view returns (uint8) {
-        return s_priceFeed.decimals();
-    }
-
-    /// @notice Gets the description of the price feed
-    function getDescription() public view returns (string memory) {
-        return s_priceFeed.description();
+        return s_dataFeed.decimals();
     }
 }
 ```
 3. We continue to create the `PriceConverter.sol` file
+
 ```solidity
 // PriceConverter.sol
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.19;
 
 // import IAggregator từ orakl repository
-import { IAggregator } from "@bisonai/orakl-contracts/src/v0.1/interfaces/IAggregator.sol";
+import { IFeedProxy } from "@bisonai/orakl-contracts/v0.2/src/interfaces/IFeedProxy.sol";
+
 
 // Declare a library named PriceConverter
 library PriceConverter {
     
     // Declare function getPrice with input as contract interface and return uint256
-    function getPrice(IAggregator priceFeed) internal view returns (uint256) {
+    function getPrice(IFeedProxy dataFeed) internal view returns (uint256) {
         // gọi function latestRoundData() trong priceFeed
-        (, int256 answer,,,) = priceFeed.latestRoundData();
+        (, int256 answer,) = dataFeed.latestRoundData();
         // Returns the ETH/USD rate with 18 digits (Oracle has 8 zeros so add 10 zeros)
         // ETH/USD rate in 18 digit
         return uint256(answer * 10000000000);
@@ -195,9 +196,9 @@ library PriceConverter {
     // It wouldn't work for every aggregator
     // Convert KLAY amount to USD amount
     // function getConversionRate takes input ethAmount with type uint256 and interface contract, returns uint256
-    function getConversionRate(uint256 ethAmount, IAggregator priceFeed) internal view returns (uint256) {
+    function getConversionRate(uint256 ethAmount, IFeedProxy dataFeed) internal view returns (uint256) {
         // First get the eth price using getPrice and assign it to the variable ethPrice
-        uint256 ethPrice = getPrice(priceFeed);
+        uint256 ethPrice = getPrice(dataFeed);
         // Then multiply ethPrice by the amount of ether and divide by 18 zeros
         // In solidity, we should multiply before dividing because there is no float
         // This calculation is ethPrice (18 digits) * ethAmount (18 digits) / 18 digits to get back 18 digits.      
@@ -564,7 +565,7 @@ contract HelperConfig is Script {
 
     function getBaobabKlayConfig() public pure returns (NetworkConfig memory baobabNetworkConfig) {
         baobabNetworkConfig = NetworkConfig({
-            priceFeed: 0x33D6ee12D4ADE244100F09b280e159659fe0ACE0 // KLAY / USDT
+            priceFeed: 0x1408cb13d84ba8cb533fdf332db5d78290b071c9 // KLAY / USDT
         });
     }
 
