--- a/bootcamp/en/solidity/5-Contracts/5.3b - HardhatFundMe.md
+++ b/bootcamp/en/solidity/5-Contracts/5.3b - HardhatFundMe.md
@@ -43,13 +43,15 @@ Make sure to follow the prompts higlighted in your terminal. For this project, w
 
 After initializing the hardhat project, your current directory should include:
 
-**contracts/** – this folder contains smart contract code.
+```
+1. contracts/ – this folder contains smart contract code.
 
-**ignition/** – this folder contains code that deploys your contracts on the blockchain network.
+2. ignition/ – this folder contains code that deploys your contracts on the blockchain network.
 
-**test/** – this folder contains all unit tests that test your smart contract.
+3. test/ – this folder contains all unit tests that test your smart contract.
 
-**hardhat.config.js** – this file contains configurations important for the work of Hardhat, deployment and verification of the FundMe contract.
+4. hardhat.config.js – this file contains configurations important for the work of Hardhat, deployment and verification of the FundMe contract.
+```
 
 **Step 5: Create a .env file**
 
@@ -121,7 +123,8 @@ In the contracts folder, you will create `FundMe.sol` and `PriceConverter.sol` 
 pragma solidity ^0.8.19;
 // 2. Imports
 // We import the orakl library so we can interact with oracle
-import { IAggregator } from "@bisonai/orakl-contracts/v0.1/src/interfaces/IAggregator.sol";
+
+import { IFeedProxy } from "@bisonai/orakl-contracts/v0.2/src/interfaces/IFeedProxy.sol";
 
 // We import the PriceConverter library so we can calculate the KLAY value
 import { PriceConverter } from "./PriceConverter.sol";
@@ -141,7 +144,7 @@ contract FundMe {
     // The next line means
     // use the PriceConverter library for variables with type uint256
     using PriceConverter for uint256;
-
+    
     // State variables
     // Declare a public constant MINIMUM_USD with value $5 but equal to peb so must multiply by 10^18
     uint256 public constant MINIMUM_USD = 5 * 10 ** 18;
@@ -151,8 +154,8 @@ contract FundMe {
     address[] private s_funders;
     // Declare a mapping between address and private uint256 linking the address with the fund amount.
     mapping(address => uint256) private s_addressToAmountFunded;
-    // Declare contract AggregatorV3Interface private and assign it to the variable s_pricefeed, s means storage
-    IAggregator private s_priceFeed;
+    // Declare contract AggregatorV2Interface internal and assign it to the variable s_dataFeed, s means storage
+    IFeedProxy internal s_dataFeed;
 
     // Events (we have none!)
 
@@ -175,9 +178,11 @@ contract FundMe {
     //// view / pure
 
     // Declaring a constructor with an address for priceFeed implies that this is the address of the Oracle contract with IAggregator
-    constructor(address priceFeed) {
+    constructor(address feedProxy) {
         // Input the address into the interface and assign it to the variable s_priceFeed
-        s_priceFeed = IAggregator(priceFeed);
+        // s_priceFeed = IAggregator(priceFeed);
+        s_dataFeed = IFeedProxy(feedProxy);
+
         // Assign the variable i_owner to msg.sender (the person who deploys this contract)
         i_owner = msg.sender;
     }
@@ -185,7 +190,7 @@ contract FundMe {
     /// @notice Funds our contract based on the KLAY/USDT price from Orakl
        // Deposit to our contract based on ETH/USD price
     function fund() public payable {
-        require(msg.value.getConversionRate(s_priceFeed) >= MINIMUM_USD, "You need to spend more ETH!");
+        require(msg.value.getConversionRate(s_dataFeed) >= MINIMUM_USD, "You need to spend more ETH!");
         // require(PriceConverter.getConversionRate(msg.value) >= MINIMUM_USD, "You need to spend more ETH!");
         // Then map the sender's address with msg.value in mapping s_addressToAmountFunded
         s_addressToAmountFunded[msg.sender] += msg.value;
@@ -256,22 +261,15 @@ contract FundMe {
     }
 
     /// @notice Gets the price feed
-    function getPriceFeed() public view returns (IAggregator) {
-        return s_priceFeed;
+    function getPriceFeed() public view returns (address) {
+        return s_dataFeed.getFeed();
     }
 
     /// @notice Gets the decimals of the price feed
     function getDecimals() public view returns (uint8) {
-        return s_priceFeed.decimals();
-    }
-
-    /// @notice Gets the description of the price feed
-    function getDescription() public view returns (string memory) {
-        return s_priceFeed.description();
+        return s_dataFeed.decimals();
     }
 }
-
-
 ```
 
 **PriceConverter.sol**
@@ -282,15 +280,16 @@ contract FundMe {
 pragma solidity ^0.8.19;
 
 // import IAggregator từ orakl repository
-import { IAggregator } from "@bisonai/orakl-contracts/v0.1/src/interfaces/IAggregator.sol";
+import { IFeedProxy } from "@bisonai/orakl-contracts/v0.2/src/interfaces/IFeedProxy.sol";
+
 
 // Declare a library named PriceConverter
 library PriceConverter {
     
     // Declare function getPrice with input as contract interface and return uint256
-    function getPrice(IAggregator priceFeed) internal view returns (uint256) {
+    function getPrice(IFeedProxy dataFeed) internal view returns (uint256) {
         // gọi function latestRoundData() trong priceFeed
-        (, int256 answer,,,) = priceFeed.latestRoundData();
+        (, int256 answer,) = dataFeed.latestRoundData();
         // Returns the ETH/USD rate with 18 digits (Oracle has 8 zeros so add 10 zeros)
         // ETH/USD rate in 18 digit
         return uint256(answer * 10000000000);
@@ -301,9 +300,9 @@ library PriceConverter {
     // It wouldn't work for every aggregator
     // Convert KLAY amount to USD amount
     // function getConversionRate takes input ethAmount with type uint256 and interface contract, returns uint256
-    function getConversionRate(uint256 ethAmount, IAggregator priceFeed) internal view returns (uint256) {
+    function getConversionRate(uint256 ethAmount, IFeedProxy dataFeed) internal view returns (uint256) {
         // First get the eth price using getPrice and assign it to the variable ethPrice
-        uint256 ethPrice = getPrice(priceFeed);
+        uint256 ethPrice = getPrice(dataFeed);
         // Then multiply ethPrice by the amount of ether and divide by 18 zeros
         // In solidity, we should multiply before dividing because there is no float
         // This calculation is ethPrice (18 digits) * ethAmount (18 digits) / 18 digits to get back 18 digits.      
@@ -313,7 +312,6 @@ library PriceConverter {
         return ethAmountInUsd;
     }
 }
-
 ```
 
 ## Testing FundMe Smart Contract
