update hardhat fundme vn (2)

--- a/bootcamp/vi/solidity/5-Contracts/5.3b - HardhatFundMe.md
+++ b/bootcamp/vi/solidity/5-Contracts/5.3b - HardhatFundMe.md
@@ -52,29 +52,29 @@ Sau khi khởi tạo dự án hardhat, thư mục hiện tại của bạn sẽ 
 
 3. test/ – thư mục này chưa các file test 
 
-4. hardhat.config.js – this file contains configurations important for the work of Hardhat, deployment and verification of the FundMe contract.
+4. hardhat.config.js – file này chứa những tuỳ chỉnh quan trọng của dự án, quy trình deploy và xác mình smart contract trong dự án Hardhat này.
 ```
 
 ### Bước 5: Tạo một file `.env`
 
-Now create your .env file in the project folder. This file helps us load environment variables from an `.env` file into `process.env`.
+Tạo một file `.env` trong project folder của bạn để chứa những biến môi trường.
 
-* Paste this command in your terminal to create a .env file
+* Dán lệnh này vào terminal của bạn để tạo file `.env`
 
 ```bash
 touch .env
 ```
 
-* After creating our file, let's configure our .env file to look like this:
+* Sau khi tạo file, giờ chúng ta thêm nội dung vào file như vầy:
 
 ```bash
- KAIA_KAIROS_URL= "Your Kairos RPC link"
- PRIVATE_KEY= "your private key copied from MetaMask wallet"
+KAIA_KAIROS_URL= "Your Kairos RPC link"
+PRIVATE_KEY= "your private key copied from MetaMask wallet"
 ```
 
-**Step 6: Setup Hardhat Configs**
+**Step 6: Điều chỉnh Hardhat config của bạn**
 
-Modify your `hardhat.config.js` with the following configurations:
+Thay đổi file `hardhat.config.js` với những tuỳ chỉnh sau:
 
 ```js
 require("@nomicfoundation/hardhat-toolbox");
@@ -110,9 +110,9 @@ module.exports = {
 
 ```
 
-Now that we have our development environment all set, let's get into writing our Fundme smart contract.
+Sau khi chúng ta đã thiết lập xong môi trường Hardhat, hãy bắt đầu viết smart contract FundMe.
 
-## Creating FundMe Smart Contract
+## Tạo FundMe Smart Contract
 
 In the contracts folder, you will create `FundMe.sol` and `PriceConverter.sol` file respectively.
 
@@ -124,15 +124,14 @@ In the contracts folder, you will create `FundMe.sol` and `PriceConverter.sol` 
 // 1. Pragma
 pragma solidity ^0.8.19;
 // 2. Imports
-// We import the orakl library so we can interact with oracle
+// Chúng ta import thư viện orakl để chúng ta có thể tương tác với oracle
+import { IAggregator } from "@bisonai/orakl-contracts/src/v0.1/interfaces/IAggregator.sol";
 
-import { IFeedProxy } from "@bisonai/orakl-contracts/v0.2/src/interfaces/IFeedProxy.sol";
-
-// We import the PriceConverter library so we can calculate the KLAY value
+// Chúng ta import thư viện PriceConverter để chúng ta tính toán giá trị Ether
 import { PriceConverter } from "./PriceConverter.sol";
 
 // 3. Interfaces, Libraries, Contracts
-// Declaring error is not the Owner of the contract
+// Khai báo error không phải là Owner của contract
 error FundMe__NotOwner();
 
 /**
@@ -143,26 +142,26 @@ error FundMe__NotOwner();
  */
 contract FundMe {
     // Type Declarations
-    // The next line means
-    // use the PriceConverter library for variables with type uint256
+    // Dòng tiếp theo có nghĩa là 
+    // "sử dụng library PriceConverter cho những biến có type là uint256"
     using PriceConverter for uint256;
-    
+
     // State variables
-    // Declare a public constant MINIMUM_USD with value $5 but equal to peb so must multiply by 10^18
+    // Khai báo 1 public constant MINIMUM_USD với giá trị $5 nhưng bằng wei nên phải nhân 10^18
     uint256 public constant MINIMUM_USD = 5 * 10 ** 18;
-    // Declare a private and immutable address with the name i_owner, i means immutable.
+    // Khai báo 1 address private và immutable với tên là i_owner, i nghĩa là immutable.
     address private immutable i_owner;
-    // Declare a private array containing a list of people who fund ether with the name s_funders, s means storage.
+    // Khai báo 1 array private chứa danh sách những người fund ether vào với tên là s_funders, s nghĩa là storage.
     address[] private s_funders;
-    // Declare a mapping between address and private uint256 linking the address with the fund amount.
+    // Khai báo 1 mapping giữa address với uint256 private liên kết địa chỉ với số tiền fund.
     mapping(address => uint256) private s_addressToAmountFunded;
-    // Declare contract AggregatorV2Interface internal and assign it to the variable s_dataFeed, s means storage
-    IFeedProxy internal s_dataFeed;
+    // Khai báo contract AggregatorV3Interface private và gán vào biến s_pricefeed, s nghĩa là storage
+    IAggregator private s_priceFeed;
 
     // Events (we have none!)
 
     // Modifiers
-    // Declare an onlyOwner modifier to assign to a function that only the owner can call
+    // Khai báo 1 modifier onlyOwner để gán vào function mà chỉ owner có thể gọi được
     modifier onlyOwner() {
         // require(msg.sender == i_owner);
         if (msg.sender != i_owner) revert FundMe__NotOwner();
@@ -179,36 +178,34 @@ contract FundMe {
     //// private
     //// view / pure
 
-    // Declaring a constructor with an address for priceFeed implies that this is the address of the Oracle contract with IAggregator
-    constructor(address feedProxy) {
-        // Input the address into the interface and assign it to the variable s_priceFeed
-        // s_priceFeed = IAggregator(priceFeed);
-        s_dataFeed = IFeedProxy(feedProxy);
-
-        // Assign the variable i_owner to msg.sender (the person who deploys this contract)
+    // Khai báo constructor với 1 địa chỉ cho priceFeed ám chỉ rằng đây là địa chỉ của contract Oracle với IAggregator
+    constructor(address priceFeed) {
+        // input địa chỉ vào interface và gán vào biến s_priceFeed
+        s_priceFeed = IAggregator(priceFeed);
+        // Gán biến i_owner là msg.sender (người deploy contract này)
         i_owner = msg.sender;
     }
 
     /// @notice Funds our contract based on the KLAY/USDT price from Orakl
-       // Deposit to our contract based on ETH/USD price
+       // Gửi tiền vào contract của chúng ta dựa trên giá ETH/USD
     function fund() public payable {
-        require(msg.value.getConversionRate(s_dataFeed) >= MINIMUM_USD, "You need to spend more ETH!");
+        require(msg.value.getConversionRate(s_priceFeed) >= MINIMUM_USD, "You need to spend more ETH!");
         // require(PriceConverter.getConversionRate(msg.value) >= MINIMUM_USD, "You need to spend more ETH!");
-        // Then map the sender's address with msg.value in mapping s_addressToAmountFunded
+        // Sau đó map địa chỉ của người gửi với msg.value trong mapping s_addressToAmountFunded
         s_addressToAmountFunded[msg.sender] += msg.value;
-        // Then add the sender address to the list of funders
+        // Sau đó thêm địa chỉ người gửi vào danh sách các funders
         s_funders.push(msg.sender);
     }
 
     function withdraw() public onlyOwner {
-        // Use for loop, starting from index 0 to index less than the length of the list, and index plus 1 for each loop
+        // dùng for loop, bắt đàu từ index 0 đến index ít hơn length của danh sách, và index cộng 1 cho mỗi vòng loop
         for (uint256 funderIndex = 0; funderIndex < s_funders.length; funderIndex++) {
-            // assign the address value at funderIndex in the s_funders list to the funder address
+            // gán giá trị address tại funderIndex trong danh sách s_funders vào address funder
             address funder = s_funders[funderIndex];
-            // Change the value of mapping s_addressToAmountFunded whose address is funder to 0, meaning this funder has withdrawn
+            // thay đổi giá trị của mapping s_addressToAmountFunded có address là funder thành 0, tức là funder này đã withdraw
             s_addressToAmountFunded[funder] = 0;
         }
-        // Create a new s_funders list with a new dynamic array (literally a list) of size 0
+        // tạo một danh sách s_funders mới với 1 dynamic array (nôm na là danh sách) mới với kích cỡ bằng 0
         s_funders = new address[](0);
         // Transfer vs call vs Send
         // Transfer vs call vs Send
@@ -217,14 +214,14 @@ contract FundMe {
         // - call (forward all gas or set gas, returns bool for success or failure)
         // payable(msg.sender).transfer(address(this).balance);
 
-        // Send the entire balance of this contract to i_owner with no data in the transaction and return boolean success or not
+        // Gửi toàn bộ balance của contract này tới i_owner và không có data trong transaction và trả về boolean success hay không
         (bool success,) = i_owner.call{value: address(this).balance}("");
-        // Require bool success true otherwise revert completely       
+        // Yêu cầu bool success true nếu không thì revert toàn bộ        
         require(success);
     }
 
     function cheaperWithdraw() public onlyOwner {
-        // Copy the list of s_funders from storage to memory, that is, load from global state to local state. Changing global state consumes more gas than local state
+        // Copy danh sách s_funders từ storage vào memory, tức là load từ global state vào local state. Thay đổi global state tốn nhiều gas hơn local state
         address[] memory funders = s_funders;
         // mappings can't be in memory, sorry!
         for (uint256 funderIndex = 0; funderIndex < funders.length; funderIndex++) {
@@ -238,7 +235,7 @@ contract FundMe {
     }
 
     /** Getter Functions */
-    // Functions are only used to GET information
+    // Những function chỉ dùng để GET thông tin
     /**
      * @notice Gets the amount that an address has funded
      *  @param fundingAddress the address of the funder
@@ -263,13 +260,18 @@ contract FundMe {
     }
 
     /// @notice Gets the price feed
-    function getPriceFeed() public view returns (address) {
-        return s_dataFeed.getFeed();
+    function getPriceFeed() public view returns (IAggregator) {
+        return s_priceFeed;
     }
 
     /// @notice Gets the decimals of the price feed
     function getDecimals() public view returns (uint8) {
-        return s_dataFeed.decimals();
+        return s_priceFeed.decimals();
+    }
+
+    /// @notice Gets the description of the price feed
+    function getDescription() public view returns (string memory) {
+        return s_priceFeed.description();
     }
 }
 ```
@@ -411,7 +413,8 @@ describe("FundMe", function () {
     const [deployer, addr1, addr2] = await ethers.getSigners();
 
     const MockDataFeedAggregator = await ethers.getContractFactory("MockDataFeedAggregator");
-    const mockPriceFeed = await MockDataFeedAggregator.connect(deployer).deploy(8, 2000 * 10 ** 8); // Example price of 2000 USD with 8 decimals
+    const mockPriceFeed = await MockDataFeedAggregator.connect(deployer).deploy(8, 2000 * 10 ** 8); 
+    // Example price of 2000 USD with 8 decimals
     await mockPriceFeed.waitForDeployment(); // Ensure the contract is deployed
 
     // Use fully qualified name for FundMe contract
