added video for bootcamp vn

--- a/bootcamp/vi/solidity/1-Intro/1.1 - Blockchain.md
+++ b/bootcamp/vi/solidity/1-Intro/1.1 - Blockchain.md
@@ -1,6 +1,9 @@
 # Căn bản về Blockchain
 
 ## Blockchain là gì?
+
+[![Kaia DApp Bootcamp VN Blockchain là gì](https://img.youtube.com/vi/osbAc53hxlw/0.jpg)](https://www.youtube.com/watch?v=osbAc53hxlw)
+
 Blockchain là một sổ cái số phân tán và không thể thay đổi, ghi lại tất cả các giao dịch xảy ra trên một mạng. Mỗi khối trong chuỗi chứa một số lượng giao dịch được mã hóa, và khi một khối mới được tạo ra, nó được liên kết mật thiết với khối trước đó, tạo thành một chuỗi liên tục không thể bị thay đổi mà không bị phát hiện.
 
 ![blockchain là gì minh hoạ](/bootcamp/vi/solidity/images/what-is-blockchain.png)
