--- a/bootcamp/vi/solidity/1-Intro/1.1 - Blockchain.md
+++ b/bootcamp/vi/solidity/1-Intro/1.1 - Blockchain.md
@@ -2,7 +2,7 @@
 
 ## Blockchain là gì?
 
-[![Kaia DApp Bootcamp VN Blockchain là gì](https://img.youtube.com/vi/osbAc53hxlw/0.jpg)](https://www.youtube.com/watch?v=osbAc53hxlw)
+[![Kaia DApp Bootcamp VN Blockchain là gì](https://img.youtube.com/vi/osbAc53hxlw/0.jpg)](https://www.youtube.com/watch?v=osbAc53hxlw&list=PLCgMXdNzV13X0wED74de7Xb6OE31X_OTo)
 
 Blockchain là một sổ cái số phân tán và không thể thay đổi, ghi lại tất cả các giao dịch xảy ra trên một mạng. Mỗi khối trong chuỗi chứa một số lượng giao dịch được mã hóa, và khi một khối mới được tạo ra, nó được liên kết mật thiết với khối trước đó, tạo thành một chuỗi liên tục không thể bị thay đổi mà không bị phát hiện.
 
@@ -11,6 +11,9 @@ Blockchain là một sổ cái số phân tán và không thể thay đổi, ghi
 Điều này đảm bảo tính minh bạch và an toàn cao, vì thông tin không thể bị thay đổi hoặc xóa một cách dễ dàng mà không có sự đồng thuận của mạng, làm cho blockchain trở thành công nghệ nền tảng cho các ứng dụng như tiền điện tử và hợp đồng thông minh.
 
 ## Kaia PBFT consensus
+
+[![Kaia DApp Bootcamp VN Blockchain là gì](https://img.youtube.com/vi/JexV9lMZJpM/0.jpg)](https://www.youtube.com/watch?v=JexV9lMZJpM&list=PLCgMXdNzV13X0wED74de7Xb6OE31X_OTo)
+
 Cơ chế đồng thuận: Kaia sử dụng thuật toán Istanbul BFT, một phiên bản cải tiến của PBFT (Practical Byzantine Fault Tolerance) được tối ưu cho mạng blockchain.
 
 Mục tiêu:
