edit bootcamp vn

--- a/bootcamp/vi/solidity/1-Intro/1.1 - Blockchain.md
+++ b/bootcamp/vi/solidity/1-Intro/1.1 - Blockchain.md
@@ -33,8 +33,8 @@ Khi giao dịch được gửi tới CN (`Council`) từ các PN, hàm `VRF (Ver
 
 ![kaia PBFT là gì minh hoạ](/bootcamp/vi/solidity/images/kaia-pbft-consensus.png)
 
-## KLVM
-`KLVM`, viết tắt của `Kaia Virtual Machine`, là một môi trường máy ảo phi tập trung chạy trên mạng blockchain Kaia. `KLVM` cho phép việc thực thi các hợp đồng thông minh, là những chương trình tự động thực hiện các giao dịch hoặc các hành động cụ thể dựa trên các điều kiện đã được mã hóa trước. Hợp đồng thông minh được viết bằng các ngôn ngữ lập trình như Solidity, sau đó được biên dịch thành `bytecode` mà `KLVM` có thể hiểu và thực thi. `KLVM` tương thích với `EVM` của Ethereum nên hỗ trợ hoàn toàn các công cụ phát triển, `opcode`, và mã nguồn hiện tại.
+## Kai Virtual Machine (KVM)
+`KVM`, viết tắt của `Kaia Virtual Machine`, là một môi trường máy ảo phi tập trung chạy trên mạng blockchain Kaia. `KVM` cho phép việc thực thi các hợp đồng thông minh, là những chương trình tự động thực hiện các giao dịch hoặc các hành động cụ thể dựa trên các điều kiện đã được mã hóa trước. Hợp đồng thông minh được viết bằng các ngôn ngữ lập trình như Solidity, sau đó được biên dịch thành `bytecode` mà `KVM` có thể hiểu và thực thi. `KVM` tương thích với `EVM` của Ethereum nên hỗ trợ hoàn toàn các công cụ phát triển, `opcode`, và mã nguồn hiện tại.
 
 ## Smart contract là gì?
 `Smart contract` là một dạng chương trình máy tính được thiết kế để tự động thực hiện, kiểm soát, hoặc xác nhận các sự kiện và hành động theo các điều khoản đã được lập trình sẵn. Chúng tồn tại và hoạt động trên `Kaia`, đảm bảo tính minh bạch và bảo mật cao do không thể bị sửa đổi sau khi đã triển khai. `Smart contract` giúp tự động hóa các quy trình, giảm bớt sự cần thiết của trung gian và giảm thiểu rủi ro lừa đảo hoặc sai sót. Chúng rất linh hoạt và có thể được sử dụng trong nhiều lĩnh vực khác nhau, từ tài chính và bảo hiểm đến quản lý chuỗi cung ứng và bất động sản. Sự phát triển của `smart contract` đang mở ra một kỷ nguyên mới trong cách thức tương tác và thực hiện các giao dịch kỹ thuật số, mang lại hiệu quả, minh bạch và tự chủ lớn hơn cho người dùng.
@@ -42,7 +42,7 @@ Khi giao dịch được gửi tới CN (`Council`) từ các PN, hàm `VRF (Ver
 ## Transaction và cách ký Transaction
 Trong mạng lưới Kaia, "transaction" hoặc giao dịch là một hành động được thực hiện bởi người dùng để chuyển `KAIA` (Kaia) hoặc các token trên Kaia từ địa chỉ này sang địa chỉ khác, hoặc để tương tác với các hợp đồng thông minh (smart contract). Mỗi giao dịch bao gồm các thông tin như địa chỉ nguồn, địa chỉ đích, số lượng tiền được chuyển, `gas` (phí giao dịch) và dữ liệu tùy chọn nếu giao dịch tương tác với hợp đồng thông minh.
 
-Khi thực hiện giao dịch trên Kaia, việc ký giao dịch bằng ví crypto như Kaikas là bước quan trọng để đảm bảo tính an toàn và bảo mật. Cụ thể, quá trình này diễn ra như sau:
+Khi thực hiện giao dịch trên Kaia, việc ký giao dịch bằng ví crypto như Kaikas/Metamask là bước quan trọng để đảm bảo tính an toàn và bảo mật. Cụ thể, quá trình này diễn ra như sau:
 
 1. Tạo Giao Dịch: Người dùng nhập các thông tin cần thiết cho giao dịch như địa chỉ nhận, số lượng `KAIA` hoặc token cần chuyển, và gas. Trong ví dụ như Kaikas, người dùng có thể điều chỉnh mức `gas` để giao dịch được xử lý nhanh hơn.
 
